syntax = "proto3";

package schema;
option go_package = "github.com/s7techlab/cckit/state/mapping/testdata/schema";

import "google/protobuf/timestamp.proto";

// EntityWithCompositeId
message EntityWithCompositeId {
    string id_first_part = 1; // part of composite primary key
    uint32 id_second_part = 2; // part of composite primary key
    google.protobuf.Timestamp id_third_part = 3; // part of composite primary key

    string name = 4;
    int32 value = 5;
}

// EntityCompositeId - container for composite primary key
message EntityCompositeId {
    string id_first_part = 1;
    uint32 id_second_part = 2;
    google.protobuf.Timestamp id_third_part = 3;
}

// EntityWithCompositeIdList
message EntityWithCompositeIdList {
    repeated EntityWithCompositeId items = 1;
}

// CreateEntityWithCompositeId
message CreateEntityWithCompositeId {
    string id_first_part = 1;
    uint32 id_second_part = 2;
    google.protobuf.Timestamp id_third_part = 3;
    string name = 4;
    int32 value = 5;
}

// UpdateEntityWithCompositeId
message UpdateEntityWithCompositeId {
    string id_first_part = 1;
    uint32 id_second_part = 2;
    google.protobuf.Timestamp id_third_part = 3;
    string name = 4;
    int32 value = 5;
}
